2003-08-24 John Fleck <jfleck@inkstain.net>

	* rni18n.xml
	placeholder for discussion of GNOME's translation
	goodness

2003-08-22 John Fleck <jfleck@inkstain.net>

	add
	* rna11y.xml
	edit
	* rngucharmap.xml
	* reale-notes.xml
	add a11y section, stuff from Noah for gucharmap
	section

2003-08-18 John Fleck <jfleck@inkstainn.net>

	add
	* rnnewmaintainers.xml
	add placeholder file for the "welcome to the
	new maintainers" schtick

2003-08-18 John Fleck <jfleck@inkstainn.net>

	add
	* rncontrolcenter.xml
	add control center, various edits

2003-08-17 John Fleck <jfleck@inkstain.net>

	added:
	* rngcalctool.xml
	* rngpdf.xml
	* rngucharmap.xml
	* rnzenity.xml
	various other edits

2003-08-14 John Fleck <jfleck@inkstain.net>

	* *.xml
	finish conversion to xinclude, many edits
	

2003-08-09 John Fleck <jfleck@inkstain.net>

	* release-notes.xml
	* rnepiphany.xml
	add epiphany section

2003-08-05 John Fleck <jfleck@inkstain.net>

	* release-notes.xml
	* rndesktop.xml
	add Nautilus and panel sections, begin conversion to
	use xinclude for the included files

2003-08-02 John Fleck <jfleck@inkstain.net>

	* release-notes.xml
	first pass at new big picture theme stuff
	