@@ -1,3 +1,9 @@
+2003-08-25 John Fleck <jfleck@inkstain.net>
+
+	* rni18n.xml
+	add list of languages supported as of Aug. 25
+	(this'll bear another update before release)
+	
 2003-08-24 John Fleck <jfleck@inkstain.net>
 
 	* rni18n.xml
